--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
