--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "express": "^4.18.3",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
